# getup

./: Cargo.toml
src/: cli.rs  core.rs  main.rs
