[package]
name = "getup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
structopt = "0.3"
serde_json = "1.0.111"
home = "0.5.9"
anyhow = "1.0.79"
